--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	package="com.robotemplates.webviewapp"
+	package="com.wegest.workingevolution"
 	android:installLocation="auto">
 	
 	<!-- versionCode, versionName, minSdkVersion, targetSdkVersion properties are set via Gradle script -->
@@ -14,23 +14,9 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-	<!--
-	You can easily change the main theme. Just modify application.android:theme attribute.
-	There are 10 themes you can use:
-		Theme.WebViewApp.Blue
-		Theme.WebViewApp.Brown
-		Theme.WebViewApp.Gray
-		Theme.WebViewApp.Green
-		Theme.WebViewApp.Lime
-		Theme.WebViewApp.Orange
-		Theme.WebViewApp.Purple
-		Theme.WebViewApp.Red
-		Theme.WebViewApp.Teal
-		Theme.WebViewApp.Violet
-	-->
 
 	<application
-		android:name=".WebViewAppApplication"
+		android:name="com.wegest.workingevolution.WebViewAppApplication"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:theme="@style/Theme.WebViewApp.Blue"
@@ -43,7 +29,7 @@
 		<meta-data android:name="com.onesignal.NotificationOpened.DEFAULT" android:value="DISABLE" />
 
 		<activity
-			android:name=".activity.MainActivity"
+			android:name="com.wegest.workingevolution.activity.MainActivity"
 			android:label="@string/app_name"
 			android:launchMode="standard"
 			android:screenOrientation="landscape"
